test/corpus/expressions-closure.txt
==================
Empty closure
==================

{ }

---

(source_file
  (expression_statement (closure)))

==================
Closure with single statement body
==================

{ x }

---

(source_file
  (expression_statement
    (closure
      (expression_statement (identifier)))))

==================
Closure with explicit empty parameter list
==================

{ -> }

---

(source_file
  (expression_statement
    (closure
      (closure_parameters))))

==================
Closure with one parameter
==================

{ a -> a }

---

(source_file
  (expression_statement
    (closure
      (closure_parameters
        (closure_parameter name: (identifier)))
      (expression_statement (identifier)))))

==================
Closure with multiple parameters
==================

{ a, b, c -> a }

---

(source_file
  (expression_statement
    (closure
      (closure_parameters
        (closure_parameter name: (identifier))
        (closure_parameter name: (identifier))
        (closure_parameter name: (identifier)))
      (expression_statement (identifier)))))

==================
Closure with multiple statements in body
==================

{ a b c }

---

(source_file
  (expression_statement
    (closure
      (expression_statement (identifier))
      (expression_statement (identifier))
      (expression_statement (identifier)))))

==================
Closure as list element
==================

[{ a -> a }, { b -> b }]

---

(source_file
  (expression_statement
    (list_literal
      (closure
        (closure_parameters
          (closure_parameter name: (identifier)))
        (expression_statement (identifier)))
      (closure
        (closure_parameters
          (closure_parameter name: (identifier)))
        (expression_statement (identifier))))))

==================
Nested closure
==================

{ a -> { b -> a } }

---

(source_file
  (expression_statement
    (closure
      (closure_parameters
        (closure_parameter name: (identifier)))
      (expression_statement
        (closure
          (closure_parameters
            (closure_parameter name: (identifier)))
          (expression_statement (identifier)))))))

==================
Closure with typed parameter
==================

{ String s -> s }

---

(source_file
  (expression_statement
    (closure
      (closure_parameters
        (closure_parameter
          type: (type_identifier)
          name: (identifier)))
      (expression_statement (identifier)))))

==================
Closure with multiple typed parameters
==================

{ String a, int b -> a }

---

(source_file
  (expression_statement
    (closure
      (closure_parameters
        (closure_parameter
          type: (type_identifier)
          name: (identifier))
        (closure_parameter
          type: (type_identifier)
          name: (identifier)))
      (expression_statement (identifier)))))

==================
Closure with mixed typed and untyped parameters
==================

{ String a, b -> b }

---

(source_file
  (expression_statement
    (closure
      (closure_parameters
        (closure_parameter
          type: (type_identifier)
          name: (identifier))
        (closure_parameter
          name: (identifier)))
      (expression_statement (identifier)))))

==================
Closure with generic-typed parameter
==================

{ List<String> items -> items }

---

(source_file
  (expression_statement
    (closure
      (closure_parameters
        (closure_parameter
          type: (generic_type
            base: (type_identifier)
            arguments: (type_arguments
              (type_identifier)))
          name: (identifier)))
      (expression_statement (identifier)))))
